--- a/ser2021mediation.tex
+++ b/ser2021mediation.tex
@@ -206,7 +206,7 @@
 
 \title{{[}SER 2021 Workshop{]} Causal Mediation: Modern Methods for Path Analysis}
 \author{Iván Díaz, Nima Hejazi, Kara Rudolph}
-\date{updated: April 29, 2021}
+\date{updated: May 03, 2021}
 
 \begin{document}
 \maketitle
@@ -526,11 +526,18 @@ Data}.
 \hypertarget{mediation}{%
 \chapter{Preliminaries on causal mediation analysis}\label{mediation}}
 
-\hypertarget{motivating-studies}{%
-\section{Motivating studies}\label{motivating-studies}}
+\hypertarget{motivating-study}{%
+\section{Motivating study}\label{motivating-study}}
 
-{[}TO FILL IN (KARA?). IDEALLY THESE WOULD BE TWO OR THREE EXAMPLES THAT WE CAN
-USE THROUGHOUT THE WORKSHOP FOR ALL EFFECTS{]}
+Do differences in the effects of treatment (comparing two medications for opioid use disorder, naltrexone vs buprenorphine) on risk of relapse operate through mediators of adherence, opioid use, pain, and depressive symptoms? \citep{rudolph2020explaining}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth]{/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/ctndag} 
+
+}
+
+\end{figure}
 
 \hypertarget{what-is-causal-mediation-analysis}{%
 \section{What is causal mediation analysis?}\label{what-is-causal-mediation-analysis}}
@@ -554,9 +561,8 @@ USE THROUGHOUT THE WORKSHOP FOR ALL EFFECTS{]}
 \begin{itemize}
 \tightlist
 \item
-  Assume you are interested in the effect of a treatment \(A\) ({[}FILL IN FROM
-  MOTIVATING EXAMPLE{]}) on an outcome \(Y\) ({[}FILL IN{]}) through a mediator \(M\)
-  ({[}FILL IN{]})
+  Assume you are interested in the effect of a treatment \(A\) (naltrexone vs.~buprenorphine) on an outcome \(Y\) (risk of relapse) through mediators \(M\)
+  (adherence, opioid use, pain, depressive symptoms)
 \item
   We could fit the following models:
   \begin{align}
@@ -566,7 +572,7 @@ USE THROUGHOUT THE WORKSHOP FOR ALL EFFECTS{]}
     \end{align}
 \item
   The product \((\gamma_1\beta_1)\) has been proposed as a measure of the effect
-  of \(X\) on \(Y\) through \(M\)
+  of \(A\) on \(Y\) through \(M\)
 \item
   Causal interpretation problems with this method:
 
@@ -606,11 +612,11 @@ confounding issues. We will focus on the two types of graph:
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.8\linewidth]{01-preface_files/figure-latex/unnamed-chunk-1-1} 
+{\centering \includegraphics[width=0.8\linewidth]{01-preface_files/figure-latex/unnamed-chunk-2-1} 
 
 }
 
-\caption{Directed acylcic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-1}
+\caption{Directed acyclic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-2}
 \end{figure}
 
 \hypertarget{intermediate-confounders}{%
@@ -618,11 +624,11 @@ confounding issues. We will focus on the two types of graph:
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.8\linewidth]{01-preface_files/figure-latex/unnamed-chunk-2-1} 
+{\centering \includegraphics[width=0.8\linewidth]{01-preface_files/figure-latex/unnamed-chunk-3-1} 
 
 }
 
-\caption{Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-2}
+\caption{Directed acyclic graph under intermediate confounders of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-3}
 \end{figure}
 
 The above graphs can be interpreted as a \emph{non-parametric structural equation model}
@@ -716,6 +722,15 @@ The above graphs can be interpreted as a \emph{non-parametric structural equatio
   Interventional direct and indirect effects
 \end{itemize}
 
+\begin{figure}
+
+{\centering \includegraphics[width=0.8\linewidth]{02-effects-def_files/figure-latex/unnamed-chunk-1-1} 
+
+}
+
+\caption{Directed acyclic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-1}
+\end{figure}
+
 \hypertarget{controlled-direct-effects}{%
 \section{Controlled direct effects}\label{controlled-direct-effects}}
 
@@ -728,6 +743,9 @@ The above graphs can be interpreted as a \emph{non-parametric structural equatio
 \item
   Compare \(A=1\) vs \(A=0\) with \(M=m\) fixed
 \end{itemize}
+
+Under the below identification assumptions, the controlled direct can be identified:
+\[ \E(Y_{1,m} - Y_{0,m}) = \E_w\{\E(Y \mid 1, m, w) - \E(Y \mid 0, m, w)\}\]
 
 \hypertarget{identification-assumptions}{%
 \subsection{Identification assumptions:}\label{identification-assumptions}}
@@ -797,6 +815,8 @@ indirect counterparts?}
 \hypertarget{natural-direct-and-indirect-effects}{%
 \section{Natural direct and indirect effects}\label{natural-direct-and-indirect-effects}}
 
+Still using the same DAG as above,
+
 Natural direct effect (NDE):
 \begin{equation*}
   \psi_{\text{NDE}} = \E(Y_{1,M_0} - Y_{0,M_0})
@@ -807,7 +827,8 @@ Natural indirect effect (NIE):
   \psi_{\text{NIE}} = \E(Y_{1,M_1} - Y_{1,M_0})
 \end{equation*}
 
-The NDE can also be written as: \(\E_W \sum_m \{\E(Y_{1,m} \mid W) - \E(Y_{0,m} \mid W)\} \P(M_{0}=m \mid W)\)
+If the cross-world assumption holds (defined below), the NDE can also be written
+as: \(\E_W \sum_m \{\E(Y_{1,m} \mid W) - \E(Y_{0,m} \mid W)\} \P(M_{0}=m \mid W)\)
 
 \begin{itemize}
 \tightlist
@@ -824,6 +845,13 @@ The NDE can also be written as: \(\E_W \sum_m \{\E(Y_{1,m} \mid W) - \E(Y_{0,m} 
 }
 
 \end{figure}
+
+Under the below identification assumptions, the natural direct effect can be identified:
+\begin{equation*}
+\E(Y_{1,M_0} - Y_{0,M_0}) =
+  \E_w\{\sum_m \{\E(Y \mid 1, m, w) - \E(Y \mid 0, m, w)\} P(M=m \mid A=0,w)\}
+\end{equation*}
+(The natural indirect effect can be identified similarly.)
 
 \hypertarget{identification-assumptions-1}{%
 \subsection{Identification assumptions:}\label{identification-assumptions-1}}
@@ -878,11 +906,11 @@ mediator-outcome relationship (e.g., adherence)?}
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.8\linewidth]{02-effects-def_files/figure-latex/unnamed-chunk-2-1} 
+{\centering \includegraphics[width=0.8\linewidth]{02-effects-def_files/figure-latex/unnamed-chunk-3-1} 
 
 }
 
-\caption{Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-2}
+\caption{Directed acyclic graph under intermediate confounders of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-3}
 \end{figure}
 
 \begin{figure}
@@ -893,26 +921,61 @@ mediator-outcome relationship (e.g., adherence)?}
 
 \end{figure}
 
+\hypertarget{unidentifiability-of-the-nde-and-nie-in-this-setting}{%
+\subsection{Unidentifiability of the NDE and NIE in this setting}\label{unidentifiability-of-the-nde-and-nie-in-this-setting}}
+
+In this example, natural direct and indirect effects are
+unidentifiable from observed data on \((W,A,Z,M,Y)\). The technical
+reason for this is that the cross-world counterfactual assumption
+\begin{equation*}
+  Y(1,m)\indep M(0)\mid W
+\end{equation*}
+
+does not hold in the above directed acyiclic graph. Intuitively, the
+reason for this is that an intervention setting \(A=1\) (necessary for
+the definition of \(Y(1,m)\)) induces a counterfactual variable
+\(Z(1)\). Likewise, an intervention setting \(A=0\) (necessary for the
+definition of \(M(0)\)) induces a counterfactual \(Z(0)\). The variables
+\(Z(1)\) and \(Z(0)\) are correlated because they share unmeasured common
+causes. The variable \(Z(1)\) is correlated with \(Y(1,m)\), and the
+variable \(Z(0)\) is correlated with \(M(0)\), because they are
+counterfactual outcomes in the same hypothetical worlds. Thus, to
+achieve \(Y(1,m)\) independent of \(M(0)\), it would be necessary to
+adjust for either \(Z(1)\) or \(Z(0)\). This is impossible to do since
+these variables are unmeasured.
+
 \hypertarget{interventional-indirect-effects}{%
 \section{Interventional (in)direct effects}\label{interventional-indirect-effects}}
 
 \begin{itemize}
-\tightlist
 \item
-  Fully conditional on past
+  Let \(G_{M \mid a, W}\) denote a random draw from the distribution of \(M(a) \mid W\)
 \item
-  Conditional SDE: \(\E(Y_{a, g_{M \mid Z, a^{\star}, W}}) - \E(Y_{a^{\star}, g_{M \mid Z, a^{\star}, W}})\)
+  Define the counterfactual \(Y(1,G_{M \mid 0, W})\) as the counterfactual
+  variable in a hypothetical world where \(A\) is set \(A=1\) and \(M\) is
+  set to \(M=G_{M \mid 0, W}\) with porbability one.
 \item
-  Conditional SIE: \(\E(Y_{a, g_{M \mid Z, a, W}}) - \E(Y_{a, g_{M \mid Z, a^{\star}, W}})\)
+  Define \(Y(0,G_{M \mid 0, W})\) and \(Y(1,G_{M \mid 1, W})\) similarly
 \item
-  Marginal SDE: \(\E(Y_{a, g_{M \mid a^{\star}, W}}) - \E(Y_{a^{\star}, g_{M \mid a^{\star}, W}})\)
+  Then we can define:
+  \begin{equation*}
+    \E[Y(1,G_{M \mid 1, W}) - Y(0,G_{M \mid 0, W})] = \underbrace{\E[Y(1,G_{M \mid 1, W}) -
+      Y(1,G_{M \mid 0, W})]}_{\text{interventional indirect effect}} +
+      \underbrace{\E[Y(1,G_{M \mid 0, W}) -
+      Y(0,G_{M \mid 0, W})]}_{\text{interventional direct effect}}
+  \end{equation*}
 \item
-  Marginal SIE: \(\E(Y_{a, g_{M \mid a, W}}) - \E(Y_{a, g_{M \mid a^{\star}, W}})\)
-\item
-  Note that \(g_{M \mid Z, a^{\star}, W}\), \(g_{M \mid a^{\star}, W}\) represents
+  Note that \(G_{M \mid a^{\star}, W}\) represents a
   stochastic intervention on the mediator, where value \(m\) is drawn with
-  probability \(\P(M = m \mid Z, A = a^{\star}, W = w)\),
-  \(\P(M = m \mid A = a^{\star}, W = w)\), respectively
+  probability \(\P(M = m \mid A = a^{\star}, W = w)\)
+\item
+  Marginal PIDE: \(\E(Y_{a, g_{M \mid a^{\star}, W}}) - \E(Y_{a^{\star}, g_{M \mid a^{\star}, W}})\)
+\item
+  Marginal PIIE: \(\E(Y_{a, g_{M \mid a, W}}) - \E(Y_{a, g_{M \mid a^{\star}, W}})\)
+\item
+  Conditional PIDE: \(\E(Y_{a, g_{M \mid Z, a^{\star}, W}}) - \E(Y_{a^{\star}, g_{M \mid Z, a^{\star}, W}})\)
+\item
+  Conditional PIIE: \(\E(Y_{a, g_{M \mid Z, a, W}}) - \E(Y_{a, g_{M \mid Z, a^{\star}, W}})\)
 \item
   Can you think of an example when you would want the conditional versions?
   Marginal versions?
@@ -925,6 +988,13 @@ mediator-outcome relationship (e.g., adherence)?}
 }
 
 \end{figure}
+
+Under the following identification assumptions, the population interventional direct effect is identified:
+\begin{equation*}
+\E(Y_{1, g_{M \mid 0, W}}) - \E(Y_{0, g_{M \mid 0, W}}) = \E_w \{\sum_{z,m}
+  \{\E(Y \mid 1, z, m, w) P(z \mid 1, w) - \E(Y \mid 1, z, m, w)
+  P(z \mid 0, w)\} P(m \mid A=0, w) \}
+\end{equation*}
 
 \hypertarget{identification-assumptions-2}{%
 \subsection{Identification assumptions:}\label{identification-assumptions-2}}
@@ -964,85 +1034,6 @@ Is this the estimand I want?
 }
 
 \end{figure}
-
-\hypertarget{interventional}{%
-\section{The Interventional Direct and Indirect Effects}\label{interventional}}
-
-\hypertarget{definition-of-the-effects}{%
-\subsection{Definition of the effects}\label{definition-of-the-effects}}
-
-Consider the following directed acyclic graph.
-
-\begin{figure}
-
-{\centering \includegraphics[width=0.8\linewidth]{02-effects-def_files/figure-latex/unnamed-chunk-6-1} 
-
-}
-
-\caption{Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-6}
-\end{figure}
-
-Here, \(A\) is the treatment of interest, \(M\) is the mediator of
-interest, \(W\) is a pre-treatment variable containing confounders of
-\(A\) on \(M\) and \(Y\),and \(Z\) is a post-treatment variable contaning
-confounders of the mediator and the exposure which are affected by
-treatment.
-
-\hypertarget{example}{%
-\subsection{Example}\label{example}}
-
-{[}TO FILL IN{]}
-
-\hypertarget{unidentifiability-of-the-nde-and-nie-in-this-setting}{%
-\subsection{Unidentifiability of the NDE and NIE in this setting}\label{unidentifiability-of-the-nde-and-nie-in-this-setting}}
-
-In this example, natural direct and indirect effects are
-unidentifiable from observed data on \((W,A,Z,M,Y)\). The technical
-reason for this is that the cross-world counterfactual assumption
-\begin{equation*}
-  Y(1,m)\indep M(0)\mid W
-\end{equation*}
-
-does not hold in the aboce directed acyiclic graph. Intuitively, the
-reason for this is that an intervention setting \(A=1\) (necessary for
-the definition of \(Y(1,m)\)) induces a counterfactual variable
-\(Z(1)\). Likewise, an intervention setting \(A=0\) (necessary for the
-definition of \(M(0)\)) induces a counterfactual \(Z(0)\). The variables
-\(Z(1)\) and \(Z(0)\) are correlated because they share unmeasured common
-causes. The variable \(Z(1)\) is correlated with \(Y(1,m)\), and the
-variable \(Z(0)\) is correlated with \(M(0)\), because they are
-counterfactual outcomes in the same hypothetical worlds. Thus, to
-achieve \(Y(1,m)\) independent of \(M(0)\), it would be necessary to
-adjust for either \(Z(1)\) or \(Z(0)\). This is impossible to do since
-these variables are unmeasured.
-
-\hypertarget{recovering-direct-and-indirect-effects}{%
-\subsection{Recovering direct and indirect effects}\label{recovering-direct-and-indirect-effects}}
-
-Even though estimation of the NDE and NIE is not possible in the
-apresence of confounders of the mediation-outcome relation affected by
-treatment, it is possible to redefine the effects in a way such that
-they are identifiable. Specifically:
-
-\begin{itemize}
-\tightlist
-\item
-  Let \(G(a)\) denote a random draw from the distribution of \(M(a) \mid W\)
-\item
-  Define the counterfactual \(Y(1,G(0))\) as the counterfactual
-  variable in a hypothetical world where \(A\) is set \(A=1\) and \(M\) is
-  set to \(M=G(0)\) with porbability one.
-\item
-  Define \(Y(0,G(0))\) and \(Y(1,G(1))\) similarly
-\item
-  Then we can define:
-  \begin{equation*}
-    \E[Y(1,G(1)) - Y(0,G(0))] = \underbrace{\E[Y(1,G(1)) -
-      Y(1,G(0))]}_{\text{interventional indirect effect}} +
-      \underbrace{\E[Y(1,G(0)) -
-      Y(0,G(0))]}_{\text{interventional direct effect}}
-  \end{equation*}
-\end{itemize}
 
 \hypertarget{estimandirl}{%
 \chapter{How to choose an estimand: Real world example}\label{estimandirl}}
@@ -1123,8 +1114,8 @@ What estimand do we want?
 \hypertarget{stochastic}{%
 \chapter{Stochastic Direct and Indirect Effects}\label{stochastic}}
 
-\hypertarget{definition-of-the-effects-1}{%
-\section{Definition of the effects}\label{definition-of-the-effects-1}}
+\hypertarget{definition-of-the-effects}{%
+\section{Definition of the effects}\label{definition-of-the-effects}}
 
 Consider the following directed acyclic graph.
 
@@ -1134,7 +1125,7 @@ Consider the following directed acyclic graph.
 
 }
 
-\caption{Directed acylcic graph under no intermediate confounders of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-1}
+\caption{Directed acyclic graph under no intermediate confounders of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-1}
 \end{figure}
 
 \hypertarget{motivation-for-stochastic-interventions}{%
@@ -1496,7 +1487,7 @@ Recall:
 
 }
 
-\caption{Directed acylcic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-1}
+\caption{Directed acyclic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-1}
 \end{figure}
 
 Assuming a binary \(A\), we define the natural direct effect as:
@@ -1731,7 +1722,7 @@ Recall that in the presence of a intermediate confounder natural (in)direct effe
 
 }
 
-\caption{Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-6}
+\caption{Directed acyclic graph under intermediate confounders of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-6}
 \end{figure}
 
 We define the interventional direct effect as:
